# geektime-bootcamp-ai-homework

w2/: FEATURE_EXPORT.md  (+1 more)
w2/db_query/backend/: .env.example  README.md  pyproject.toml
w2/db_query/backend/app/: config.py  database.py  main.py
w5/pg-mcp/: .env.example  .gitignore  CHANGELOG.md  CHECKLIST.md  CONFIG_CLEANUP_REPORT.md  DEFECT_ANALYSIS.md  FASTMCP_FIX_NEEDED.py  FIX_IMPLEMENTATION_REPORT.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MCP_TESTING_GUIDE.md  MULTI_DATABASE_GUIDE.md  MULTI_DATABASE_IMPLEMENTATION.md  MULTI_DATABASE_QUICKSTART.md  PHASE2B_COMPLETION_REPORT.md  PHASE2_COVERAGE_REPORT.md  QUICKSTART.md  QUICK_START_MCP.md  README.md  REFACTORING.md  RESILIENCE_OBSERVABILITY.md  SERVER_READY.md  SIX_STEPS_EXECUTION_REPORT.md  TESTING.md  Test-AzureConfig.ps1  Test-MCP.ps1  config.example.yaml  coverage.json  demo_query_users.py  mcp-config.json  pyproject.toml  test_azure_config.py  test_azure_multi_db.py  test_mcp_simple.py
w5/pg-mcp/examples/: demo_multi_database.py
w5/pg-mcp/fixtures/: Manage-Databases.ps1  QUICKSTART.md  README.md  Rebuild-TestDatabases.ps1  Test-Databases.ps1  large_erp.sql  medium_ecommerce.sql  small_blog.sql
w5/pg-mcp/pg_mcp_server/: __init__.py  __main__.py  multi_database_server.py  server.py
w5/pg-mcp/tests/: TESTING_GUIDE.md  TEST_SUMMARY.md  conftest.py  run_tests.ps1  test_config.py  test_metrics.py  test_multi_database_access_control.py  test_multi_database_executor.py  test_query_processor.py  test_rate_limiter.py  test_resilience_integration.py  test_result_validator_enhanced.py  test_retry.py  test_schema_cache.py  test_schema_cache_enhanced.py  test_single_to_multi_database_conversion.py  test_sql_executor.py  test_sql_executor_enhanced.py  test_sql_generator.py  test_sql_validator.py
(+77 files in other folders)
